feat: Added database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+spring.sql.init.mode=ALWAYS
+spring.datasource.url=jdbc:h2:file:./db/filmorate
+spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.enabled=true
+spring.datasource.username=sa
+spring.datasource.password=password
+logging.level.org.springframework.web=DEBUG
 logging.level.org.zalando.logbook=TRACE
+logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
+logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 logging.level.ru.yandex.practicum=debug
